# oecluster

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  pyrightconfig.json  vrzn.toml
.github/workflows/: build-wheels.yml
benchmarks/: bitbirch.py  cluster_algorithms.py
docs/superpowers/plans/: 2026-03-20-superpose-redesign.md
docs/superpowers/specs/: 2026-03-20-superpose-redesign.md
examples/: getting-started.ipynb  quickstart_smiles.py  rank_representatives.py
include/oecluster/: CDist.h  DistanceMatrix.h  DistanceMetric.h  Error.h  PDist.h  PairwiseComparison.h  StorageBackend.h  ThreadPool.h  oecluster.h
include/oecluster/clustering/: Agglomerative.h  BitBirch.h  Butina.h  Centroid.h  ClusterReport.h  ClusterTypes.h  DBSCAN.h  HDBSCAN.h  Representative.h
include/oecluster/comparisons/: FingerprintComparison.h  ROCSComparison.h  SuperposeComparison.h
include/oecluster/metrics/: FingerprintMetric.h  ROCSMetric.h  SiteHopperMetric.h  SuperposeMetric.h
python/: _oepdist_main.py  pyproject.toml
python/oecluster/: __init__.py  _build_info.py  _cli.py  oecluster.py
python/oeselect/: oeselect.py
scripts/: build_python.py  version.py
src/: CDist.cpp  DistanceMatrix.cpp  PDist.cpp  StorageBackend.cpp  ThreadPool.cpp
src/clustering/: Agglomerative.cpp  BitBirch.cpp  BitBirchKernels.cpp  BitBirchKernels.h  BitBirchTree.cpp  BitBirchTree.h  Butina.cpp  Centroid.cpp  ClusterMetrics.cpp  ClusterMetrics.h  ClusterReport.cpp  ClusterTypes.cpp  DBSCAN.cpp  DistanceAccess.h  HDBSCAN.cpp  HDBSCANLinkage.cpp  HDBSCANLinkage.h  HDBSCANTree.cpp  HDBSCANTree.h  Representative.cpp  ThresholdGraph.cpp  ThresholdGraph.h
src/comparisons/: FingerprintComparison.cpp  ROCSComparison.cpp  SuperposeComparison.cpp
src/metrics/: FingerprintMetric.cpp  ROCSMetric.cpp  SiteHopperMetric.cpp  SuperposeMetric.cpp
swig/: CMakeLists.txt  oecluster.i
tests/: CMakeLists.txt
tests/assets/: spruce_5FQD_1_5FQD_1-ALIGNED_BC__DU__LVY_B-1438.oedu  spruce_8G66_1_8G66_1-ALIGNED_BC__DU__YOT_B-502.oedu
tests/cpp/: test_agglomerative_clustering.cpp  test_bio_metrics.cpp  test_bitbirch_clustering.cpp  test_bitbirch_kernels.cpp  test_butina_clustering.cpp  test_cdist.cpp  test_cluster_report.cpp  test_dbscan_clustering.cpp  test_fingerprint_comparison.cpp  test_fingerprint_metric.cpp  test_hdbscan_clustering.cpp  test_pdist.cpp  test_rocs_comparison.cpp  test_rocs_metric.cpp  test_storage.cpp  test_superpose_comparison.cpp  test_thread_pool.cpp
tests/python/: conftest.py  test_agglomerative.py  test_bitbirch.py  test_bitbirch_benchmark.py  test_butina.py  test_centroid.py  test_cluster_report.py  test_clustering_result.py  test_dbscan.py  test_examples.py  test_hdbscan.py  test_oecluster.py  test_package_imports.py  test_pdist.py  test_representative.py
tools/: CMakeLists.txt  MolReader.cpp  MolReader.h  OutputWriter.cpp  OutputWriter.h  oepdist.cpp
