[build-system]
requires = ["scikit-build-core>=0.8", "swig>=4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "oecluster"
version = "3.2.0"
description = "High-performance pairwise distance and clustering for OpenEye Toolkits"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Your Name", email = "your.email@example.com"}]
keywords = ["chemistry", "clustering", "pairwise distance", "openeye", "cheminformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = ["openeye-toolkits>=2025.2", "numpy>=1.20"]

[project.scripts]
oepdist = "_oepdist_main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "scipy>=1.7", "vrzn>=0.1.0"]

[tool.scikit-build]
cmake.version = ">=3.21"
cmake.build-type = "Release"
build.targets = ["oecluster_python", "oepdist"]
build-dir = "build/{wheel_tag}"
wheel.install-dir = "."
wheel.py-api = "cp310"
wheel.exclude = ["**.pyc", "**/__pycache__", "*.a", "CMakeFiles/**"]
logging.level = "INFO"
strict-config = false

[tool.scikit-build.cmake.define]
OECLUSTER_BUILD_TESTS = "OFF"
OECLUSTER_BUILD_TOOLS = "ON"
OECLUSTER_BUILD_PYTHON = "ON"
OPENEYE_USE_SHARED = "ON"
OECLUSTER_USE_STABLE_ABI = "ON"
OECLUSTER_UNIVERSAL2 = "ON"

# =============================================================================
# TOML-driven build configuration for scripts/build_python.py
# =============================================================================
# This section is read by build_python.py to parameterize the build.
# The script itself is identical across all projects — only this config changes.
[tool.oe-build]
package-name = "oecluster"
cmake-test-flag = "OECLUSTER_BUILD_TESTS"
rpath-strategy = "platform"  # "platform" = @loader_path/../openeye/libs/{platform}, "simple" = @loader_path

# OpenEye libraries that are expected to be missing from delocate
# (they are provided at runtime by openeye-toolkits, not bundled in the wheel)
expected-missing-libs = [
    "liboechem", "liboesystem", "liboeplatform",
    "liboemath", "libzstd",
    "liboegraphsim",
    "liboeshape", "liboehermite", "liboeopt", "liboemolpotential",
    "liboebio",
    "liboegrid", "liboezap", "liboespicoli", "liboesitehopper",
    "liboespruce",
]

# Additional CMake defines passed during wheel build (beyond the standard ones)
[tool.oe-build.extra-cmake-defines]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
addopts = "-v"
